[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/crytic/solana-lints", pattern = "lints/*" },
]