[package]
name = "sunrise-stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sunrise_stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "allow-missing-optionals"] }
anchor-spl = "0.30.1"
ahash = "0.7.8"
impact-nft-cpi = { path = "../../dependencies/impact-nft-cpi"  }
marinade-cpi = "0.3.0"
spl-stake-pool = {version = "1.0.0", features = ["no-entrypoint"] }
mpl-token-metadata = "4.1.2"
spl-token-2022 = { version = "3.0.4", features = ["no-entrypoint"] }
