[package]
name = "sunrise-stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sunrise_stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
#anchor-lang = { version = "0.30.1", features = ["init-if-needed", "allow-missing-optionals"] }
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1",features = ["metadata"] }
ahash = "0.7.8"
#spl-stake-pool = {version = "1.0.0", features = ["no-entrypoint"] }
