[package]
name = "sunrise-stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sunrise_stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "allow-missing-optionals"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
#anchor-lang = { git = "https://github.com/coral-xyz/anchor" }
#anchor-spl = { git = "https://github.com/coral-xyz/anchor", features = ["metadata"] }
#solana-program = "=2.0.3"
ahash = "0.7.8"
#spl-stake-pool = {version = "1.0.0", features = ["no-entrypoint"] }
